--- a/Cursos2/pom.xml
+++ b/Cursos2/pom.xml
@@ -23,10 +23,11 @@
           <warSourceDirectory>WebContent</warSourceDirectory>
         </configuration>
       </plugin>
-      <plugin>
-          <groupId>org.codehaus.mojo</groupId>
+      
+   <plugin>
+          <groupId>org.sonarsource.scanner.maven</groupId>
           <artifactId>sonar-maven-plugin</artifactId>
-          <version>2.2</version>
+          <version>3.6.0.1398</version>
         </plugin>
     </plugins>
   </build>
