Insertado uso de archivo properties

--- a/Cursos2/src/Cursos/datos.properties
+++ b/Cursos2/src/Cursos/datos.properties
@@ -1,2 +1,3 @@
 version=1.0
 bbdd=bbdd.db
+create_cursos=CREATE TABLE IF NOT EXISTS CURSOS (REF INTEGER PRIMARY KEY AUTOINCREMENT,NAME VARCHAR(100),PRODUCTS VARCHAR(100),PAYMENT VARCHAR(100),GRADE INTEGER(1),AMOUNT INTEGER(10) DEFAULT 0,CONSTRAINT FK_NAME FOREIGN KEY (NAME) REFERENCES USUARIO(NAME))
